@@ -26,13 +26,13 @@ This table summarizes each block and which base levels they're included in:
 | ESLint Plugin                      | `--add-eslint-plugin`, `--exclude-eslint-plugin`                                           |         |        |            |
 | ESLint Regexp Plugin               | `--add-eslint-regexp-plugin`, `--exclude-eslint-regexp-plugin`                             |         |        | 💯         |
 | ESLint YML Plugin                  | `--add-eslint-yml-plugin`, `--exclude-eslint-yml-plugin`                                   |         |        | 💯         |
+| Exports                            | `--add-exports`, `--exclude-exports`                                                       | ✔️      | ✅     | 💯         |
 | Funding                            | `--add-funding`, `--exclude-funding`                                                       |         | ✅     | 💯         |
 | GitHub Actions CI                  | `--add-github-actions-ci`, `--exclude-github-actions-ci`                                   | ✔️      | ✅     | 💯         |
 | GitHub Issue Templates             | `--add-github-issue-templates`, `--exclude-github-issue-templates`                         | ✔️      | ✅     | 💯         |
 | GitHub PR Template                 | `--add-github-pr-template`, `--exclude-github-pr-template`                                 | ✔️      | ✅     | 💯         |
 | Gitignore                          | `--add-gitignore`, `--exclude-gitignore`                                                   | ✔️      | ✅     | 💯         |
 | Knip                               | `--add-knip`, `--exclude-knip`                                                             |         |        | 💯         |
-| Main                               | `--add-main`, `--exclude-main`                                                             | ✔️      | ✅     | 💯         |
 | MIT License                        | `--add-mit-license`, `--exclude-mit-license`                                               | ✔️      | ✅     | 💯         |
 | ncc                                | `--add-ncc`, `--exclude-ncc`                                                               |         |        |            |
 | nvmrc                              | `--add-nvmrc`, `--exclude-nvmrc`                                                           |         |        | 💯         |
@@ -49,6 +49,7 @@ This table summarizes each block and which base levels they're included in:
 | release-it                         | `--add-release-it`, `--exclude-release-it`                                                 |         | ✅     | 💯         |
 | Renovate                           | `--add-renovate`, `--exclude-renovate`                                                     |         |        | 💯         |
 | Security Docs                      | `--add-security-docs`, `--exclude-security-docs`                                           | ✔️      | ✅     | 💯         |
+| Side Effects                       | `--add-side-effects`, `--exclude-side-effects`                                             | ✔️      | ✅     | 💯         |
 | Templated With                     | `--add-templated-with`, `--exclude-templated-with`                                         | ✔️      | ✅     | 💯         |
 | TSDown                             | `--add-tsdown`, `--exclude-tsdown`                                                         | ✔️      | ✅     | 💯         |
 | TypeScript                         | `--add-typescript`, `--exclude-typescript`                                                 | ✔️      | ✅     | 💯         |
@@ -88,13 +89,13 @@ Each `*.ts` source file within `src/` is built into `.d.ts` and `.js` output fil
 Building once:
 
 ```shell
-pnpm run build
+pnpm build
 ```
 
 Building in watch mode:
 
 ```shell
-pnpm run build --watch
+pnpm build --watch
 ```
 
 ### Formatting
@@ -111,7 +112,7 @@ Additional formatting can be provided by the following plugins:
 Auto-formatting all files:
 
 ```shell
-pnpm run format --write
+pnpm format --write
 ```
 
 ### Linting
@@ -122,13 +123,13 @@ Uses [**typescript-eslint**](https://typescript-eslint.io) to understand TypeScr
 Linting all files:
 
 ```shell
-pnpm run lint
+pnpm lint
 ```
 
 Linting all files, auto-fixing fixable rule reports:
 
 ```shell
-pnpm run lint --fix
+pnpm lint --fix
 ```
 
 ### Package Management
@@ -139,7 +140,7 @@ It caches packages in a computer-wide registry and symlinks installed packages w
 Installing packages:
 
 ```shell
-pnpm run install
+pnpm install
 ```
 
 ### Repository Templates
@@ -166,13 +167,13 @@ Configured with strict compiler options, including [`noImplicitAny`](https://aka
 Type checking once:
 
 ```shell
-pnpm run tsc
+pnpm tsc
 ```
 
 Type checking in watch mode:
 
 ```shell
-pnpm run tsc --watch
+pnpm tsc --watch
 ```
 
 ## "Common" Base Level
@@ -199,7 +200,7 @@ Contributions will be auto-detected when possible using [all-contributors-auto-a
 Running Knip:
 
 ```shell
-pnpm run lint:knip
+pnpm lint:knip
 ```
 
 ### OctoGuide
@@ -227,19 +228,19 @@ Additionally:
 Running tests in watch mode:
 
 ```shell
-pnpm run test
+pnpm test
 ```
 
 Running tests in watch mode and auto-updating [Vitest snapshots](https://vitest.dev/guide/snapshot.html):
 
 ```shell
-pnpm run test -u
+pnpm test -u
 ```
 
 Running tests once with coverage tracking:
 
 ```shell
-pnpm run test run --coverage
+pnpm test run --coverage
 ```
 
 ## "Everything" Base Level
@@ -247,18 +248,34 @@ pnpm run test run --coverage
 This level is for developers who are eager to get the maximum tooling benefits in a repository.
 Using the _"everything"_ level will gain you comprehensive, strict coverage of all sorts of repository issues, including auto-sorting of properties and strict ESLint configs.
 
-- [Lint ESLint](#lint-eslint)
-- [Lint JSDoc](#lint-jsdoc)
-- [Lint JSON](#lint-json)
-- [Lint Package JSON](#lint-package-json)
-- [Lint Packages](#lint-packages)
-- [Lint Perfectionist](#lint-perfectionist)
-- [Lint Regexp](#lint-regexp)
-- [Lint Spelling](#lint-spelling)
-- [Lint Strict](#lint-strict)
-- [Lint Stylistic](#lint-stylistic)
-- [Lint YML](#lint-yml)
-- [OctoGuide Strict](#octoguide-strict)
+- [Blocks](#blocks)
+  - ["Minimal" Base Level](#minimal-base-level)
+    - [Building](#building)
+    - [Formatting](#formatting)
+    - [Linting](#linting)
+    - [Package Management](#package-management)
+    - [Repository Templates](#repository-templates)
+    - [Type Checking](#type-checking)
+  - ["Common" Base Level](#common-base-level)
+    - [Contributors](#contributors)
+    - [Lint Knip](#lint-knip)
+    - [OctoGuide](#octoguide)
+    - [Releases](#releases)
+    - [Renovate](#renovate)
+    - [Testing](#testing)
+  - ["Everything" Base Level](#everything-base-level)
+    - [Lint ESLint](#lint-eslint)
+    - [Lint JSDoc](#lint-jsdoc)
+    - [Lint JSON](#lint-json)
+    - [Lint Package JSON](#lint-package-json)
+    - [Lint Packages](#lint-packages)
+    - [Lint Perfectionist](#lint-perfectionist)
+    - [Lint Regexp](#lint-regexp)
+    - [Lint Spelling](#lint-spelling)
+    - [Lint Strict](#lint-strict)
+    - [Lint Stylistic](#lint-stylistic)
+    - [Lint YML](#lint-yml)
+    - [OctoGuide Strict](#octoguide-strict)
 
 ### Lint ESLint
 
